# CO-OPS-Tidal-Analysis-Datum-Calculator

./: .gitignore  Example.csv  LICENSE.txt  README.md  SDC.py  config.cfg  control_data.py  environment.yml  filter_defs.py  pyproject.toml  tides.py
data/: Example.csv  info.txt  test_timeseries_biggap.csv  test_timeseries_nontidal_spikes.csv  test_timeseries_onlyhighs.csv  test_timeseries_simple.csv  test_timeseries_smallsignal_flatline.csv  test_timeseries_uneventimesampling.csv  test_timeseries_unreadablevalues.csv
tadc/: control_data.py  daily_max_analysis.py  filter_defs.py  inundation_analysis.py  qa.py  qc.py  run.py  tides.py
tests/: test_functionality.py
